# distributor

./: .prettierrc  Cargo.toml  README.md  package.json  tsconfig.json
.github/workflows/: release.yaml
.husky/: pre-commit
api/: Cargo.toml
command_list/: claim_from_api.sh  deploy_distributor.sh
merkle-tree/: merkle_tree.json  merkle_tree_test_csv.json
programs/merkle-distributor/: Cargo.toml
programs/merkle-distributor/idl/: merkle_distributor.json
programs/merkle-distributor/src/: lib.rs
programs/merkle-distributor/src/instructions/: mod.rs
programs/merkle-distributor/src/instructions/admin/: new_distributor.rs  set_operator.rs
programs/merkle-distributor/src/instructions/claim/: new_claim.rs
programs/merkle-distributor/src/instructions/claim_and_stake/: new_claim_and_stake.rs
programs/merkle-distributor/src/state/: claim_status.rs  merkle_distributor.rs
tests/: test_claim_and_stake_permissioned.ts  test_claim_and_stake_permissionless.ts  test_claim_permissioned.ts  test_claim_permissionless.ts
tests/anchor-bankrun/: index.ts
tests/common/: asserter.ts  index.ts
tests/locked_voter/: locked_voter.ts  setup.ts
tests/merkle_distributor/: index.ts
tests/merkle_tree/: balance-tree.ts  merkle-tree.ts
