[package]
name = "merkle-distributor"
version = "0.1.0"
description = "A Solana program for distributing tokens according to a Merkle root."
edition = "2021"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_distributor"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
localnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
jito-merkle-verify = { path = "../../verify" }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }
num_enum = "0.7.1"
static_assertions = { workspace = true }
